@@ -2,6 +2,7 @@ Version XI - xxxx edition. 25 September 2023
 
 Allow to not save configuration when exiting ZEsarUX
 Allow to select normal ZEsarUX logo or X Anniversary logo
+Menus can no longer be minimized (that had no sense)
 
 ----
 
